# rating-update

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  containerfile  init.sql  nginx.conf.example  util.py
benches/: bench.rs
deployment/: deployment.playbook.ansible.yaml  inventory.yaml
deployment/podman-systemd-service-units/: rating-update.container  rating-update.pod
docker_scripts/: docker_build.sh  docker_run.sh  entrypoint.sh  start_ru.sh  startx.sh
src/: api.rs  ggst_api.rs  main.rs  rater.rs  requests.rs  responses.rs  website.rs
static/: 404.html  500.html  503.html  scripts.js  styles.css
templates/: about.html.hbs  footer.html.hbs  matchups.html.hbs  metadata.html.hbs  navbar.html.hbs  player_char.html.hbs  player_char_history.html.hbs  player_page.html.hbs  player_page_auth.html.hbs  supporters.html.hbs  top_char.html.hbs
