[package]
name = "rating-update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
rocket = { version = "0.5.1", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", default-features = false, features = ["sqlite_pool"] }
rocket_dyn_templates = { version = "0.1.0", default-features = false, features = ["handlebars"] }
tokio = { version = "1", features=["full"] }
rusqlite = { version = "0.29", features = ["bundled", "functions"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
lazy_static = "1"
glob = "0.3"
chrono = "0.4"
simplelog = "0.9"
log = "0.4"
fxhash = "0.2"
num-format = "0.4"
all_asserts = "2.3.1"
aes-gcm = "0.10"
hex = "0.4"
rmp-serde = "1"
base64-url = "1.4"
reqwest = "0.11"
getrandom = "*"
steamworks = { git = "https://github.com/Noxime/steamworks-rs.git"}
rand = "0.8.5"
async-std = "1.12.0"
dotenv = "0.15.0"

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }
futures = "0.3"

[[bench]]
name = "bench"
harness = false

[profile.bench]
debug = 1
